# stm32f0discovery-starter-rs

./: Cargo.toml  LICENSE  README.md  flash_device.sh  memory.x  openocd.cfg
.cargo/: config
examples/: adc_serial.rs  serial_hello_world.rs  serial_tx_hello_world.rs
src/: main.rs
