[package]
name = "stm32f0discovery-starter-rs"
version = "0.1.0"
authors = ["cdsupina <cdsupina@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
panic-halt = "0.2.0"
stm32f0xx-hal =  { version = "0.13.0", features = ["stm32f051"]}
nb = "0.1.1"

[profile.release]
debug = true
lto = true
opt-level = "s"
